zsxd 1.7.1 (under development)

* Fix Creepers never exploding after they are hurt (#16).
* Fix a typo in English dialogs.

zsxd-1.7.0 (2013-10-13).

* Use Solarus 1.1.0.
* Replace .spc musics by .it musics (faster) and remove unused ones.
* Add an animated Solarus logo from Maxs.
* Fix savegames created with Solarus 0.9 but that were never run.
* Fix a slight alignment issue with the hurt animation of the hero.
* Dungeon 1 3F: fix "attempt to compare number with nil" in counter 36 (#3).
* Dungeon 2 1F: fix an enemy not counting in WFT room.

zsxd-1.6.2 (2013-06-25)

* Use solarus 1.0.4.
* Fix a crash due to a missing text in the French options pause menu.
* Fix a crash due to an invalid treasure in a pot of crazy house 1F.
* Fix a typo in the French inventory pause menu.

zsxd-1.6.1 (2013-06-25)

* Use solarus 1.0.3.

zsxd-1.6 (2013-06-22)

* Use solarus 1.0.2.
* Improve the English translation.
* Fix the hero stuck after jumping on a block in dungeon 2.
* Fix all missing empty lines in dialogs.
* Add the Solarus engine logo at startup.

zsxd-1.5.3 (2013-05-08)

* Use solarus 0.9.3.
* Dungeon 2: the piece of heart could be obtained very easily with the sword
* Change the English website url in the credits dialogs
* Fix missing lines in dialogs
* Fix the CMake script that creates the zip archive.
* Make creepers appear earlier in the game (#1).

zsxd-1.5.2 (2012-03-31)

* Fix missing empty lines in the credits dialogs

zsxd-1.5.1 (2012-03-31)

* Fix a crash during a dialog, introduced by zsxd 1.5

zsxd-1.5 (2012-02-12)

* Use solarus-0.9.1
* Fix a typo in a dialog
* Change the color of the splash sprites when plunging into lava

zsxd-1.4 (2011-12-23)

* Use solarus-0.9.0 (changelogs of solarus and zsxd will now be separated)
* Includes all improvements and bug fixes of solarus since zsxd-1.3
* Fix a duplicate heart container

zsxd-1.3 (2011-08-12)

* Add the English translation
* Fix a precision bug with sensors

zsxd-1.2 (2011-04-23)
