@@ -16,15 +16,13 @@ local console = {
   },
 }
 
-function console:start()
+function console:on_started()
   self.enabled = true
   self:build_input_text()
-  sol.menu.start(sol.main, self)
 end
 
-function console:stop()
+function console:on_finished()
   self.enabled = false
-  sol.menu.stop(self)
 end
 
 function console:get_input_text()
@@ -72,9 +70,8 @@ end
 
 function console:on_key_pressed(key, modifiers)
 
-  local handled = true
   if key == "f12" or key == "escape" then
-    self:stop()
+    sol.menu.stop(self)
   elseif key == "backspace" then
     if self:get_output_text() ~= "" then
       self:clear()
@@ -92,11 +89,10 @@ function console:on_key_pressed(key, modifiers)
     self:history_up()
   elseif key == "down" then
     self:history_down()
-  else
-    handled = false
   end
 
-  return handled
+  -- The debugging console has exclusive focus.
+  return true
 end
 
 function console:on_character_pressed(character)
