@@ -2,6 +2,7 @@ zsxd 1.7.1 (under development)
 
 * Fix Creepers never exploding after they are hurt (#16).
 * Fix a typo in English dialogs.
+* Fix the debugging console no longer working after using F1, F2 or F3.
 
 zsxd-1.7.0 (2013-10-13).
 
